# seerlord_ai

./: .env.example  .gitignore  Dockerfile  INSTALL.md  INSTALL_zh.md  PROJECT_GUIDE.md  README.en.md  README.md  README_zh.md  db_schema.sql  debug_path_extraction.py  docker-compose.yml  mcp.json  package.json  pyproject.toml  readme.txt  requirements.txt  run.py  start.bat  tasks.txt
.github/workflows/: release.yml
.svn/: wc.db
.trae/rules/: project_rules.md
Arch_Docs/: AI Agent 全系统架构图 (The Ultimate Agent Architecture).md  HIERARCHICAL_SKILL_EVOLUTION_PLAN_zh.md  PROJECT_GUIDE.md  VOYAGER_IMPLEMENTATION_PLAN.md  VOYAGER_IMPLEMENTATION_PLAN_zh.md  english_learning_plan.md
admin/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
admin/src/: auto-imports.d.ts  components.d.ts  i18n.ts  main.ts  (+1 more)
scripts/: add_tokens_column.py  bump_version.py  check_api.py  check_embedding_dim.py  debug_neo4j_data.py  export_schema.py  generate_english_plan.py  get_version.py  init_db.py  migrate_env_to_db.py  reset_ske_indexes.py  test_events.py  test_example_agent_yaml.py  test_flow.py  test_hierarchical_router.py  test_manual_routing.py  test_news_reporter.py  test_paas_api.py  test_planner_routing.py  test_plugins_compile.py  test_ske_agent.py  test_ske_api.py  test_ske_db.py  test_ske_ingestion.py  test_ske_memory.py  test_ske_retrieval.py  test_ske_search.py  test_system_skill.py  test_voyager_flow.py  test_yaml_agent.py  verify_frontend_data.py  verify_skill_evolution.py  verify_stream_access.py
server/: main.py  mcp.json
(+382 files in other folders)
